--- a/github_backup-playbook.yml
+++ b/github_backup-playbook.yml
@@ -10,7 +10,7 @@
     - name: Run Docker container for backup your GitHub accounts
       docker_container:
         name: github-backup-automation
-        image: koddr/github-backup-automation:latest
+        image: 
      
         
         
