--- a/github_backup-playbook.yml
+++ b/github_backup-playbook.yml
@@ -7,7 +7,7 @@
 - hosts: "{{ host|default('localhost') }}"
 
   tasks:
-    - name: Run Docker container for backup   
+    - name: 
      
          
     
